fixed padding on mobile

--- a/src/sass/collections-slider.scss
+++ b/src/sass/collections-slider.scss
@@ -95,6 +95,7 @@
     justify-content: space-around;
     @media (max-width: 768px) {
       padding-top: 0;
+      padding-right: 2em;
     }
 
     .collection-number {
